# spartid-ais

./: .dockerignore  .flake8  .flaskenv  .gitignore  .pre-commit-config.yaml  .ruff.toml  Dockerfile  Dockerfile.poller  Dockerfile.web  README.md  aisapp.py  aismodel.py  aisschema.py  docker-compose.yml  kystverket.py  pyproject.toml  readme.md  requirements.txt  ruff.toml
docs/: refrences.md
migrations/versions/: 18b677545b2f_initial_migration.py  2a973f6c71ca_mapped.py  cc5ba7461470_extend_historic_pos.py
notebooks/: export_to_parquet.ipynb  from_parquet.ipynb  inner_oslofjord.geojson  mandal_to_bergen.geojson  periodic_history.ipynb  sql_stats.ipynb  tracks_in_area.ipynb
spartid_ais/: __init__.py  aisapp.py  aismodel.py  aisschema.py  dashboard.py  kystverket.py  models.py  settings.py  tracksymbol2.py  view_dataexplore.py  views.py
spartid_ais/static/: leaflet.html
spartid_ais/templates/: base.html.j2  leaflet.html.j2  statistics.html.j2
static/: leaflet.html
test/: examples.txt
tests/: test_kystverket.py  test_settings.py
